Editor/Test/ok/files/New in ver x + users etc/QM 2.3.5/test CsScript/rejected/.NET hosting/rejected/CorBindToRuntimeEx2.cs
WINAPI2.ICLRRuntimeHost h
 out WINAPI2.CorBindToRuntime(0 @"svr" WINAPI2.CLSID_CLRRuntimeHost WINAPI2.IID_ICLRRuntimeHost &h)
out WINAPI2.CorBindToRuntime(L"v2.0.50727" L"svr" WINAPI2.CLSID_CLRRuntimeHost WINAPI2.IID_ICLRRuntimeHost &h)
out h
 out h.Start





 WINAPI2.ICLRRuntimeHost h
 PF
 out WINAPI2.CorBindToRuntime(0 @"svr" WINAPI2.CLSID_CLRRuntimeHost WINAPI2.IID_ICLRRuntimeHost &h)
 PN
 out h
 out h.Start
 PN
 PO
